<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/mount_alvernia_logo"
                tools:layout_editor_absoluteX="55dp"
                tools:layout_editor_absoluteY="150dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/layout_65"
                android:text="@string/hospital_porter_management_system"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="123dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/staff_id"
                android:textSize="@dimen/font_1"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="346dp" />

            <EditText
                android:id="@+id/editTextStaffID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_photo_camera_black_24dp"
                android:hint="@string/hint_staff_id"
                android:onClick="iconBack"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textSize="@dimen/textInput"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="173dp"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bluish"
                android:onClick="login"
                android:padding="@dimen/layout_15"
                android:text="@string/login"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>